# cmake_libvorbis

./: CMakeLists.txt  README.md
libogg/: CMakeLists.txt
libogg/include/ogg/: os_types.h
